@@ -226,9 +226,8 @@ main(int argc, char *argv[])
 	move_progress_bar(1, &g.v, g.ui, g.gi);
 	if (g.l.incomplete)
 		unlink(g.l.incomplete);
-	if (del_completebar)
-		removecomplete();
-	
+	removecomplete(g.v.misc.release_type);
+
 	dir = opendir(".");
 	parent = opendir("..");
 
@@ -238,7 +237,7 @@ main(int argc, char *argv[])
 		if (g.l.race)
 			unlink(g.l.race);
 	}
-	
+
 	if (findfileext(dir, ".zip")) {
 		strlcpy(g.v.file.name, findfileext(dir, ".zip"), NAME_MAX);
 		maketempdir(g.l.path);
